--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexao.cs" />
+    <Compile Include="pMarca.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="pUsuario.cs" />
   </ItemGroup>
