--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Conexao.cs" />
     <Compile Include="pMensagem.cs" />
     <Compile Include="pMarca.cs" />
+    <Compile Include="pModelo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="pUsuario.cs" />
   </ItemGroup>
