--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexao.cs" />
+    <Compile Include="pEstado.cs" />
     <Compile Include="pMensagem.cs" />
     <Compile Include="pMarca.cs" />
     <Compile Include="pModelo.cs" />
