--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Marca.cs" />
     <Compile Include="Mensagem.cs" />
     <Compile Include="Modelo.cs" />
+    <Compile Include="NewsLetter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regiao.cs" />
     <Compile Include="Usuario.cs" />
