--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria.cs" />
     <Compile Include="Marca.cs" />
     <Compile Include="Mensagem.cs" />
     <Compile Include="Modelo.cs" />
