--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="pCategoria.cs" />
     <Compile Include="Conexao.cs" />
     <Compile Include="pEstado.cs" />
     <Compile Include="pMensagem.cs" />
