--- a/Projeto Keep Walking/Projeto Keep Walking.csproj
+++ b/Projeto Keep Walking/Projeto Keep Walking.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="frmCadCategoria.aspx" />
     <Content Include="frmCadMarca.aspx" />
     <Content Include="frmCadModelo.aspx" />
     <Content Include="frmCadRegiao.aspx" />
@@ -67,6 +68,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmCadCategoria.aspx.cs">
+      <DependentUpon>frmCadCategoria.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmCadCategoria.aspx.designer.cs">
+      <DependentUpon>frmCadCategoria.aspx</DependentUpon>
+    </Compile>
     <Compile Include="frmCadMarca.aspx.cs">
       <DependentUpon>frmCadMarca.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
