--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Mensagem.cs" />
     <Compile Include="Modelo.cs" />
     <Compile Include="NewsLetter.cs" />
+    <Compile Include="Patrocinador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regiao.cs" />
     <Compile Include="Estado.cs" />
