--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -45,6 +45,7 @@
     <Compile Include="pMarca.cs" />
     <Compile Include="pModelo.cs" />
     <Compile Include="pNewsLetter.cs" />
+    <Compile Include="pPatrocinador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="pUsuario.cs" />
     <Compile Include="pRegiao.cs" />
