--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="Cores.cs" />
     <Compile Include="Marca.cs" />
     <Compile Include="Mensagem.cs" />
     <Compile Include="Modelo.cs" />
