--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Mensagem.cs" />
     <Compile Include="Modelo.cs" />
     <Compile Include="NewsLetter.cs" />
+    <Compile Include="Opcionais.cs" />
     <Compile Include="Patrocinador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regiao.cs" />
