Add Cambio Negocio e Persistencia

--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="pCambio.cs" />
     <Compile Include="pCategoria.cs" />
     <Compile Include="Conexao.cs" />
     <Compile Include="pCores.cs" />
