--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cambio.cs" />
     <Compile Include="Categoria.cs" />
     <Compile Include="Cores.cs" />
     <Compile Include="Estado.cs" />
