--- a/Projeto Keep Walking/Projeto Keep Walking.csproj
+++ b/Projeto Keep Walking/Projeto Keep Walking.csproj
@@ -57,6 +57,17 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="documentacao\SQL\Categoria.sql" />
+    <Content Include="documentacao\SQL\Cores.sql" />
+    <Content Include="documentacao\SQL\Estado.sql" />
+    <Content Include="documentacao\SQL\Marca.sql" />
+    <Content Include="documentacao\SQL\Mensagem.sql" />
+    <Content Include="documentacao\SQL\Modelo.sql" />
+    <Content Include="documentacao\SQL\Newsletter.sql" />
+    <Content Include="documentacao\SQL\Opcionais.sql" />
+    <Content Include="documentacao\SQL\Patrocinadores.sql" />
+    <Content Include="documentacao\SQL\Regiao.sql" />
+    <Content Include="documentacao\SQL\Usuarios.sql" />
     <Content Include="frmCadCategoria.aspx" />
     <Content Include="frmCadCores.aspx" />
     <Content Include="frmCadEstado.aspx" />
@@ -172,9 +183,7 @@
       <Name>Negocio</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="documentacao\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
