--- a/Projeto Keep Walking/Projeto Keep Walking.csproj
+++ b/Projeto Keep Walking/Projeto Keep Walking.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Content Include="frmCadCambio.aspx" />
     <Content Include="frmCadCategoria.aspx" />
+    <Content Include="frmCadCombustivel.aspx" />
     <Content Include="frmCadCores.aspx" />
     <Content Include="frmCadEstado.aspx" />
     <Content Include="frmCadMarca.aspx" />
@@ -86,6 +87,13 @@
     </Compile>
     <Compile Include="frmCadCategoria.aspx.designer.cs">
       <DependentUpon>frmCadCategoria.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="frmCadCombustivel.aspx.cs">
+      <DependentUpon>frmCadCombustivel.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmCadCombustivel.aspx.designer.cs">
+      <DependentUpon>frmCadCombustivel.aspx</DependentUpon>
     </Compile>
     <Compile Include="frmCadCores.aspx.cs">
       <DependentUpon>frmCadCores.aspx</DependentUpon>
