--- a/Projeto Keep Walking/Projeto Keep Walking.csproj
+++ b/Projeto Keep Walking/Projeto Keep Walking.csproj
@@ -211,6 +211,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="documentacao\Desenho de Classes.jude" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
