--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -42,6 +42,7 @@
     <Compile Include="pCambio.cs" />
     <Compile Include="pCategoria.cs" />
     <Compile Include="Conexao.cs" />
+    <Compile Include="pCidade.cs" />
     <Compile Include="pCombustivel.cs" />
     <Compile Include="pCores.cs" />
     <Compile Include="pEstado.cs" />
