--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Opcionais.cs" />
     <Compile Include="Patrocinador.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Publicidade.cs" />
     <Compile Include="Regiao.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Versao.cs" />
