--- a/Persistencia/Persistencia.csproj
+++ b/Persistencia/Persistencia.csproj
@@ -52,6 +52,7 @@
     <Compile Include="pOfertas.cs" />
     <Compile Include="pOpcionais.cs" />
     <Compile Include="pPatrocinador.cs" />
+    <Compile Include="pPublicidade.cs" />
     <Compile Include="pRegiao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="pUsuario.cs" />
