--- a/Projeto Keep Walking/Projeto Keep Walking.csproj
+++ b/Projeto Keep Walking/Projeto Keep Walking.csproj
@@ -85,6 +85,7 @@
     <Content Include="frmNewsLetter.aspx" />
     <Content Include="frmOpcionais.aspx" />
     <Content Include="frmPatrocinador.aspx" />
+    <Content Include="frmPublicidade.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -199,6 +200,13 @@
     </Compile>
     <Compile Include="frmPatrocinador.aspx.designer.cs">
       <DependentUpon>frmPatrocinador.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="frmPublicidade.aspx.cs">
+      <DependentUpon>frmPublicidade.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmPublicidade.aspx.designer.cs">
+      <DependentUpon>frmPublicidade.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
