--- a/Projeto Keep Walking/Projeto Keep Walking.csproj
+++ b/Projeto Keep Walking/Projeto Keep Walking.csproj
@@ -78,6 +78,7 @@
     <Content Include="frmCadOfertas.aspx" />
     <Content Include="frmCadRegiao.aspx" />
     <Content Include="frmCadUsuario.aspx" />
+    <Content Include="frmEnviarNewsLetter.aspx" />
     <Content Include="frmListarOfertas.aspx" />
     <Content Include="frmLogUsuario.aspx" />
     <Content Include="frmMensagem.aspx" />
@@ -143,6 +144,13 @@
     </Compile>
     <Compile Include="frmCadUsuario.aspx.designer.cs">
       <DependentUpon>frmCadUsuario.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="frmEnviarNewsLetter.aspx.cs">
+      <DependentUpon>frmEnviarNewsLetter.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="frmEnviarNewsLetter.aspx.designer.cs">
+      <DependentUpon>frmEnviarNewsLetter.aspx</DependentUpon>
     </Compile>
     <Compile Include="frmListarOfertas.aspx.cs">
       <DependentUpon>frmListarOfertas.aspx</DependentUpon>
